@@ -18,14 +18,14 @@
     <h2 id="straferunning">Strafe running</h2>
     <p>
       Strafe running is a technique that allows you to run about 40% further/faster when you move. It occurs because the game adds the speed
-      you get from moving or backwards, with the speed you get from strafing left or right.
+      you get from moving forwards or backwards, with the speed you get from strafing left or right.
     </p>
     <p>
       How to strafe run: While moving forwards (or backwards), strafe left (A) or right (D) at the same time.
     </p>
     <h2 id="riflejump">Rifle jump</h2>
     <p>
-      Rifle Jumping is the least dangerous of two known ways available to be able to jump higher. You can use this move 
+      Rifle Jumping allows you to be able to jump higher. You can use this move 
       to jump onto things you just couldn't normally jump upon. Rifle jumping can even be used for surprising an enemy by popping 
       up where they don't expect you to be!
     </p>
